Map on travel Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="init_travel">Iniciar viaje</string>
     <string name="write_plate">Ingresa la placa</string>
     <string name="invalid_plate">La placa no es correcta</string>
+    <string name="finish_travel">Terminar viaje</string>
 </resources>
