--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ControlCar</string>
-    <string name="app_driver">ControlCarConductor</string>
+    <string name="app_driver">ControlCarDriver</string>
     <string name="kmh">kmh</string>
     <string name="toggle_turn_on">Turn off !</string>
     <string name="toggle_turn_off">Turn on !</string>
